--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -89,12 +89,16 @@
           flex-direction: column;
           position: absolute;
           right: 0;
+          height: 500px;
+          overflow-y: scroll;
+          z-index: 5000;
           .snap {
-            width: 45px;
-            height: 45px;
+            width: 100px;
+            height: 100px;
             background-color: white;
             margin: 0.5rem;
             border-radius: 10px;
+            object-fit: cover;
           }
         }
       }
@@ -117,15 +121,18 @@
     align-items: center;
     flex-direction: column;
     margin-top: 1.5rem;
+   
     .user-message {
       width: 50%;
-      height: 140px;
+      height: 40px;
       border-radius: 5px;
+      padding: 5px 0px;
     }
 
     .user-message-controls {
       display: flex;
       align-items: center;
+      flex-direction: column;
       .submit-button {
         margin: 1.5rem 0.6rem;
         padding: 0.7rem 1rem;
@@ -137,6 +144,21 @@
         font-weight: bold;
         color: white;
       }
+
+      .submit-tag {
+        background-color: white;
+        border: none;
+        font-weight: 700;
+        cursor: pointer;
+        color: #5a8a86;
+        margin-top: 3rem;
+      }
+    }
+
+    .questions {
+      text-align: center;
+      width: 54%;
+      margin: -1.2rem 0;
     }
   }
 
@@ -246,10 +268,19 @@
             left: 50%;
             transform: translateX(-50%);
 
+            .record-start-stop-container {
+              .record-label {
+                font-size: 0.7rem;
+              }
+
+            }
+
             .record {
               width: 50px;
               height: 50px;
             }
+
+            
           }
 
           .snapshots-container {
@@ -310,6 +341,11 @@
         .OR-label {
           margin: 5px 0;
         }
+      }
+      .questions {
+        text-align: center;
+        width: 100%;
+        margin: -2rem 0;
       }
     }
 
