--- a/src/pages/questionnaire/questionnaire.styles.scss
+++ b/src/pages/questionnaire/questionnaire.styles.scss
@@ -19,6 +19,9 @@
             font-weight: bold;
             color: white;
         }
+        #uploadProgress {
+           
+        }
 
         .meta-data-container {
             margin-top: 3rem;
@@ -86,6 +89,9 @@
                 font-weight: bold;
                 color: white;
             }
+
+            
+           
     
             .meta-data-container {
                 margin-top: 3rem;
