--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -8,7 +8,8 @@
         margin: 0;
         color: white;
         font-weight: 100;
-        padding: 0rem 1.5rem;
+        margin: 1.2rem 1.5rem;
+        width: 70px;
       
     }
 
@@ -49,6 +50,7 @@
             background-color: #507c6b;
             border: solid 10px #507c6b;
             width: 180px;
+            height: 100%;
             justify-content: center;
             cursor: pointer;
             .user-name {
