--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,7 @@ html {
   border-radius: 10px;
   font-weight: bold;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
