--- a/src/pages/doctors-onboard/doctors-onboard.styles.scss
+++ b/src/pages/doctors-onboard/doctors-onboard.styles.scss
@@ -2,9 +2,11 @@
     display: flex;
     .illustration {
         height: 100vh;
+        width: 80%;
+        object-fit: cover;
     }
     .onboard-forms {
-        width: 100%;
+        width: 20%;
         padding: 0 1.5rem;
         display: flex;
         flex-direction: column;
@@ -15,6 +17,17 @@
             text-align: center;
             font-size: 1.8rem;
             margin-top: 9rem;
+        }
+        .meet-the-tem-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            align-self: flex-end;
+            cursor: pointer;
+            & p {
+                margin: 1rem 1rem;
+            }           
         }
         .onboard-input-container {
             display: flex;
@@ -28,9 +41,48 @@
             .signup-button {
                 cursor: pointer;
                 align-self: center;
-                
-
             }
+
+            
         }
     }
+}
+
+@media(max-width:1507px){
+    .doctor-onboard-container {
+        .illustration {
+            width: 70%;
+        }
+        .onboard-forms {
+            width: 30%;
+        }    
+    } 
+}
+
+@media(max-width:1050px){
+    .doctor-onboard-container {
+        .illustration {
+            width: 60%;
+        }
+        .onboard-forms {
+            width: 40%;
+        }    
+    } 
+}
+
+@media(max-width:870px){
+    .doctor-onboard-container {
+        .illustration {
+            width: 100%;
+            position: absolute;
+            z-index: -2;
+            opacity: 0.4;
+            background-color: #72b198;
+            
+            background-blend-mode: lighten;
+        }
+        .onboard-forms {
+            width: 100%;
+        }    
+    } 
 }
