--- a/src/pages/doctors-onboard/doctors-onboard.styles.scss
+++ b/src/pages/doctors-onboard/doctors-onboard.styles.scss
@@ -41,9 +41,26 @@
             .signup-button {
                 cursor: pointer;
                 align-self: center;
+                margin: 10px;
+                margin-top: 10px;
+                font-weight: bold;
+                user-select: none;
             }
 
             
+        }
+
+        .tnc-container {
+            margin: 3rem 0;
+            .tnc-label {
+                text-align: center;
+                .tnc {
+                    font-weight: bold;
+                    color: #72b198;
+                    cursor: pointer;
+                    user-select: none;
+                }
+            }
         }
     }
 }
@@ -78,7 +95,7 @@
             z-index: -2;
             opacity: 0.4;
             background-color: #72b198;
-            
+            height: 120vh;
             background-blend-mode: lighten;
         }
         .onboard-forms {
