--- a/src/pages/report/report.styles.scss
+++ b/src/pages/report/report.styles.scss
@@ -1,4 +1,8 @@
 .report-container {
+    .slogan {
+        padding: 1rem 2rem;
+        color: #444;
+    }
     .title-container {
         display: flex;
         align-items: center;
