--- a/src/pages/meet-the-team/meet-the-team.styles.scss
+++ b/src/pages/meet-the-team/meet-the-team.styles.scss
@@ -13,6 +13,7 @@
             font-weight: bold;
             color: #444;
             font-size: 1.2rem;
+            cursor: pointer;
         }
 
         .your-profile-label {
