--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@ body {
   margin:0;
   box-sizing: border-box;
   color: #010101;
-  font-family: 'Karla', sans-serif;
-
+  /* font-family: 'Karla', sans-serif; */
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
