--- a/src/pages/meet-the-team/meet-the-team.styles.scss
+++ b/src/pages/meet-the-team/meet-the-team.styles.scss
@@ -5,6 +5,7 @@
         padding: 1rem;
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         .back-button {
             cursor: pointer;
         }
@@ -24,6 +25,25 @@
                 transition-duration: 0.2s;
                 font-weight: bold;
             }
+        }
+
+        .search-container{
+           margin-left: auto;
+           border: rgb(161, 161, 161) solid 1px;
+           border-radius: 10px;
+            align-items: center;
+            padding: 0 0.6rem;
+           display: flex;
+          width: 25%;
+           .search-input {
+               border: none;
+               margin-left: 10px;
+               padding: 0.5rem 0.4rem;
+               width: 100%;
+               &:focus{
+                outline: none;
+               }
+           }
         }
        
     }
@@ -92,4 +112,29 @@
         }
     }
     
+}
+
+@media(max-width:510px){
+    .meet-the-team-container {
+        .title-bar-container {
+            .search-container{
+                margin: 20px auto 0 auto;
+                border: rgb(161, 161, 161) solid 1px;
+                border-radius: 10px;
+                 align-items: center;
+                 padding: 0 0.6rem;
+                display: flex;
+                width: 100%;
+               
+                .search-input {
+                    border: none;
+                    margin-left: 10px;
+                    padding: 0.5rem 0.4rem;
+                    &:focus{
+                     outline: none;
+                    }
+                }
+             }
+        }
+    }
 }
