--- a/src/components/input/input.styles.scss
+++ b/src/components/input/input.styles.scss
@@ -14,6 +14,10 @@
        padding: 0.5rem 1rem;
        border-radius: 10px;
     }
+    .text-area {
+        height: 130px;
+        resize: none;
+    }
     .check-boxes-container {
        display: flex;
        flex-wrap: wrap;
