--- a/src/pages/landing-page/landing-page.styles.scss
+++ b/src/pages/landing-page/landing-page.styles.scss
@@ -110,6 +110,8 @@
                 justify-content: center;
                 .ts-list-img {
                     width: 190px;
+                    height: 190px;
+                    border-radius: 15px;
                 }
                 .ts-list-title {
                     font-weight: bold;
